add_subdirectory("Base")
add_subdirectory("AST")
add_subdirectory("Parser")
add_subdirectory("Semantics")
add_subdirectory("ByteCode")
add_subdirectory("Interpreter")
add_subdirectory("Gen")
add_subdirectory("Project")
add_subdirectory("Core")

# Extra libs

add_subdirectory("Formatter")
# add_subdirector("LangDevKit") // For starbytes-lsp